Mise en place du crud pour l'entité BidList.

--- a/Poseiden-skeleton/src/main/resources/templates/home.html
+++ b/Poseiden-skeleton/src/main/resources/templates/home.html
@@ -9,5 +9,9 @@
 <p>
     <a href="/login">Login</a> or create one <a href="/user/list">User management</a>
 </p>
+
+<p>
+    Create one <a href="/bidList/list"> BidList management </a>
+</p>
 </body>
 </html>
