--- a/Poseiden-skeleton/src/main/resources/templates/bidList/list.html
+++ b/Poseiden-skeleton/src/main/resources/templates/bidList/list.html
@@ -37,7 +37,17 @@
 				</tr>
 			</thead>
 			<tbody>
-				<!-- TODO: Show all Bids to the table, the Action column will have Edit & Delete buttons -->
+				<!-- Show all Bids to the table, the Action column will have Edit & Delete buttons -->
+				<tr th:each="bid:${listOfBid}">
+					<td style="width: 10%" th:text="${bid.getBidListId()}"></td>
+					<td th:text="${bid.account}"></td>
+					<td th:text="${bid.type}"></td>
+					<td th:text="${bid.bidQuantity}"></td>
+					<td>
+						<a class="btn btn-danger" th:href="@{/bidList/delete/{id}(id=${bid.bidListId})}">Delete</a>
+						<a class="btn btn-primary" th:href="@{/bidList/update/{id}(id=${bid.bidListId})}">Edit</a>
+					</td>
+				</tr>
 			</tbody>
 		</table>
 	</div>
