--- a/Poseiden-skeleton/src/main/resources/templates/home.html
+++ b/Poseiden-skeleton/src/main/resources/templates/home.html
@@ -13,5 +13,8 @@
 <p>
     Create one <a href="/bidList/list"> BidList management </a>
 </p>
+<p>
+    Create one <a href="/curvePoint/list"> CurvePoint management </a>
+</p>
 </body>
 </html>
