Mise en place du crud pour l'entité Rating.

--- a/Poseiden-skeleton/src/main/resources/templates/home.html
+++ b/Poseiden-skeleton/src/main/resources/templates/home.html
@@ -16,5 +16,8 @@
 <p>
     Create one <a href="/curvePoint/list"> CurvePoint management </a>
 </p>
+<p>
+    Create one <a href="/rating/list"> Rating management </a>
+</p>
 </body>
 </html>
