--- a/Poseiden-skeleton/src/main/resources/templates/home.html
+++ b/Poseiden-skeleton/src/main/resources/templates/home.html
@@ -19,5 +19,8 @@
 <p>
     Create one <a href="/rating/list"> Rating management </a>
 </p>
+<p>
+    Create one <a href="/ruleName/list"> RuleName management </a>
+</p>
 </body>
 </html>
