Mise en place du crud pour l'entité Trade.

--- a/Poseiden-skeleton/src/main/resources/templates/home.html
+++ b/Poseiden-skeleton/src/main/resources/templates/home.html
@@ -22,5 +22,8 @@
 <p>
     Create one <a href="/ruleName/list"> RuleName management </a>
 </p>
+<p>
+    Create one <a href="/trade/list"> Trade management </a>
+</p>
 </body>
 </html>
