--- a/Poseiden-skeleton/src/main/resources/templates/ruleName/list.html
+++ b/Poseiden-skeleton/src/main/resources/templates/ruleName/list.html
@@ -17,7 +17,7 @@
 			<a href="/ruleName/list">Rule</a>
 		</div>
 		<div class="col-6 text-right">
-			Logged in user: <b th:inline="text"  class="user"> [[${#httpServletRequest.remoteUser}]] </b>
+			Logged in user: <b th:inline="text"  class="user" th:if="${currentUser}"> <p th:text="${currentUser.login}"></p> </b>
 			<form th:action="@{/logout}" method="POST">
 				<input type="submit" value="Logout"/>
 			</form>
