--- a/Poseiden-skeleton/src/main/resources/templates/user/add.html
+++ b/Poseiden-skeleton/src/main/resources/templates/user/add.html
@@ -34,9 +34,9 @@
 				<div class="col-sm-10">
 					<input type="password" th:field="*{password}" id="password" placeholder="Password" class="col-4">
 					<p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
-					<p th:if="${errorResponse}">
-						<p class="text-danger" th:text="${errorResponse.errorMessage}"></p>
-					</p>
+					<div th:if="${errorResponse}">
+						<div class="text-danger" th:text="${errorResponse.errorMessage}"></div>
+					</div>
 				</div>
 			</div>
 			<div class="form-group">
